--- a/clients/web/relay.config.json
+++ b/clients/web/relay.config.json
@@ -2,6 +2,6 @@
   "src": "./src",
   "language": "typescript",
   "schema": "./src/autogen/schema.graphql",
-  "exclude": ["**/node_modules/**", "**/__mocks__/**", "**/autogen/**"],
-  "artifactDirectory": "./src/autogen"
+  "exclude": ["**/node_modules/**", "**/__mocks__/**", "**/autogen/relay/**"],
+  "artifactDirectory": "./src/autogen/relay"
 }
