--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -16,11 +16,17 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-primitive": "^2.0.2",
     "@radix-ui/themes": "^3.2.1",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
+    "@types/three": "^0.174.0",
+    "classnames": "^2.5.1",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-relay": "^18.2.0",
-    "relay-runtime": "^18.2.0"
+    "react-router-dom": "^7.3.0",
+    "relay-runtime": "^18.2.0",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
